--- a/mysite/chess/static/chess/styles/2list_chess_open.css
+++ b/mysite/chess/static/chess/styles/2list_chess_open.css
@@ -30,7 +30,15 @@ section {
     margin: 20px auto;
     padding: 15px;
     text-align: center;
-    border: 1px solid red;
+    border: 3px solid red;
+    display: flex;
+    flex-direction: column;
+}
+
+.search input {
+    margin: 8px;
+    padding: 8px;
+    font-size: 16px;
 }
 
 
