--- a/mysite/chess/static/chess/styles/3single_open.css
+++ b/mysite/chess/static/chess/styles/3single_open.css
@@ -22,4 +22,9 @@ h2  {
 
 .notation {
     text-align: center;
+    padding: 20px 0px 100px 0px;
+    font-size: 20px;
+}
+.notation p {
+    margin-bottom: 10px;
 }
