--- a/mysite/templates/base3.html
+++ b/mysite/templates/base3.html
@@ -13,7 +13,7 @@
             <header>
                 <img src="{% static "chess/images/header8.jpg" %}" alt="image of a chessboard" title="chess board">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'profile' %}" id="profile">profile</a>
+                    <!-- <a href="{% url 'profile' %}" id="profile">profile</a> -->
                     <a href="{% url 'logout'  %}" id="log-out">Log out</a>
                 {% else %}
                     <a href="{% url 'register'  %}" id="register">Register </a>
