--- a/mysite/templates/users/logout.html
+++ b/mysite/templates/users/logout.html
@@ -5,8 +5,8 @@
 
 
 {% block content %}
-<h2>Zostałeś wylogowane</h2>
+<h2>you are logged out </h2>
 
-<a href="{% url 'login' %}">Możesz zalogować się ponownie</a>
+<a href="{% url 'login' %}">You can log in again</a>
 
 {% endblock %}
